--- a/css/styles.css
+++ b/css/styles.css
@@ -35,15 +35,34 @@ body {
 }
 
 /*linea---------------------------------------------------------------------------------------*/
-hr {
+.linea {
+  width: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  /*fin de linea--------------------------------------------------------------------------------*/
+}
+.linea hr {
   width: 80%;
   border: 0; /* Elimina el borde por defecto */
   height: 1px; /* Altura de la línea */
-  background-color: #aaaaaa; /* Color de la línea */
+  background-color: #888; /* Color de la línea */
   margin: 0 auto; /* Asegura el centrado horizontal */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
-/*fin de linea--------------------------------------------------------------------------------*/
+@media (max-width: 600px) {
+  .linea {
+    width: 100%;
+  }
+  .linea hr {
+    width: 100%;
+  }
+}
 /* ESTILOS DE BARRA DE NAVEGACION ----------------------------------------------------------------------------------*/
 .navbar-custom {
   background-color: #333;
@@ -462,10 +481,10 @@ footer a.contac-link:hover {
 .carrito .productoscarrito {
   display: flex;
   flex-direction: row;
+  /* Consultas de medios para adaptabilidad */
 }
 .carrito .productoscarrito .boxcarrito {
   display: flex;
-  gap: 15px;
   height: 80px;
   padding: 20px;
   background-color: #f9f9f9;
@@ -473,6 +492,11 @@ footer a.contac-link:hover {
   align-items: center;
   width: 100%;
   justify-content: space-between;
+}
+.carrito .productoscarrito .boxcarrito .box1 {
+  display: flex;
+  gap: 60px;
+  align-items: center;
 }
 .carrito .productoscarrito .boxcarrito img {
   width: 64px;
@@ -485,6 +509,90 @@ footer a.contac-link:hover {
   font-size: 28px;
   background-color: #f9f9f9;
   border: #f9f9f9;
+}
+@media (max-width: 980px) {
+  .carrito .productoscarrito .boxcarrito {
+    display: flex;
+    gap: 15px;
+    height: 200px;
+    padding: 20px 20px;
+    background-color: #f9f9f9;
+    border: 1px solid #ddd;
+    align-items: center;
+    width: 100%;
+    justify-content: space-around;
+  }
+  .carrito .productoscarrito .boxcarrito .box1 {
+    margin: 10px;
+    flex-direction: row;
+    display: block;
+    gap: 20px;
+  }
+  .carrito .productoscarrito .boxcarrito .box1 div {
+    margin-top: 10px;
+  }
+  .carrito .productoscarrito .boxcarrito .box1 img {
+    margin-top: 10px;
+  }
+  .carrito .productoscarrito .boxcarrito .box1 p {
+    margin-top: 10px;
+  }
+}
+@media (max-width: 600px) {
+  .carrito .productoscarrito .boxcarrito {
+    display: flex;
+    gap: 15px;
+    height: 200px;
+    padding: 20px 20px;
+    background-color: #f9f9f9;
+    border: 1px solid #ddd;
+    align-items: center;
+    width: 100%;
+    justify-content: space-between;
+  }
+  .carrito .productoscarrito .boxcarrito .box1 {
+    margin: 10px;
+    flex-direction: row;
+    display: block;
+    gap: 20px;
+  }
+  .carrito .productoscarrito .boxcarrito .box1 div {
+    margin-top: 10px;
+  }
+  .carrito .productoscarrito .boxcarrito .box1 img {
+    margin-top: 10px;
+  }
+  .carrito .productoscarrito .boxcarrito .box1 p {
+    margin-top: 10px;
+  }
+}
+@media (max-width: 400px) {
+  .carrito .productoscarrito .boxcarrito {
+    display: flex;
+    gap: 15px;
+    height: 200px;
+    padding: 20px 20px;
+    background-color: #f9f9f9;
+    border: 1px solid #ddd;
+    align-items: center;
+    width: 100%;
+    justify-content: space-between;
+  }
+  .carrito .productoscarrito .boxcarrito .box1 {
+    margin: 10px;
+    flex-direction: row;
+    display: block;
+    gap: 20px;
+  }
+  .carrito .productoscarrito .boxcarrito .box1 div {
+    margin-top: 10px;
+  }
+  .carrito .productoscarrito .boxcarrito .box1 img {
+    margin-top: 10px;
+  }
+  .carrito .productoscarrito .boxcarrito .box1 p {
+    margin-top: 10px;
+  }
 }
 .carrito .boxubicacion {
   display: flex;
