--- a/scss/layout/_carrito.scss
+++ b/scss/layout/_carrito.scss
@@ -169,4 +169,48 @@
     }
  }
 
+
+ .boxmediodepago {
+    width: 600px;
+    
+    background-color: #f9f9f9;
+    border: 1px solid #ddd;
+    margin: auto;
+    align-items: center;
+    padding: 40px;
+    .datos {
+        margin-top: 20px;
+        margin-bottom: 20px;
+       display: flex;
+       gap: 20px;
+    }
+    .btncomprar {
+        background: #333;
+        color: #fff;
+        padding: 10px 20px;
+        text-decoration: none;
+        display: block;
+        text-align: center;
+        border-radius: 0px;
+        width: 80%; /* Ocupa todo el ancho del contenedor */
+        padding: 10px;
+        margin: auto;
+        
+       
+        
+        
+        &:hover {
+            background: #555;
+            color:#fff;
+        }
+    }
+ }
+
+  
+ @media (max-width: 700px) {
+    .boxmediodepago {
+        width: 400px;
+    }
+ }
+
 }
