--- a/scss/layout/_carrito.scss
+++ b/scss/layout/_carrito.scss
@@ -215,7 +215,8 @@
 
  @media (max-width: 390px) {
     .boxmediodepago {
-        width: 300px;
+        width: 260px;
+        padding: 20px;
     }
  }
 
